test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-downstream/downstream-modified.yaml
apiVersion: v1
data:
  foo: modifiedDATA
kind: Secret
metadata:
  name: sync-modify-downstream
  namespace: sync-modify-downstream
type: Opaque
