test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-downstream/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-modify-downstream
  namespace: default
type: Opaque
