test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-downstream/trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-modify-downstream
