test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-downstream/downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-modify-downstream
  namespace: sync-modify-downstream
type: Opaque
